syntax = "proto3";

package autokitteh.envs.v1;

import "buf/validate/validate.proto";

message Env {
  string env_id = 1;
  string project_id = 2;
  string name = 3;
}

message EnvVar {
  string env_id = 1;
  string name = 2 [(buf.validate.field).string.min_len = 1];
  string value = 3;
  bool is_secret = 4;
}
